# FastContour

./: CMakeLists.txt
demo/: demo.cpp  demo_multi.cpp
headers/: detector.h  preprocess.h  utils.h
src/: detector.cpp  preprocess.cpp  utils.cpp
test/: detector_test.cc  utils_test.cc
